--- a/capacity_app/templates/capacity_app/procurement_approval.html
+++ b/capacity_app/templates/capacity_app/procurement_approval.html
@@ -111,6 +111,10 @@ td {
                                     <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
                                     <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
                                     <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
+                                    {% for i in mile_stone %}
+                                    <th>Milestone</th>
+                                    <th>Milestone Date</th>
+                                    {% endfor %}
                                     <th nowrap class="action" data-sortable="true">Actions</th>
                                 </tr>
                                 </thead>
@@ -130,6 +134,10 @@ td {
                                     <td nowrap class="gravit">{{i.gravit|floatformat}}</td>
                                     <td nowrap class="updated_at">{{i.created_at|date:'Y-m-d H:i:s'}}</td>
                                     <td nowrap class="remarks">{{i.remarks}}</td>
+                                    {% for i in mile_stone %}
+                                    <td>{{i.name}}</td>
+                                    <td>{{i.date}}</td>
+                                    {% endfor %}
                                     <td>
                                         <button type="button" class="btn btn-primary btn-sm" title="Complete Request"><a style="text-decoration:none;color:#fff;" href="{% url 'completed_procurement_approval' pk=i.request_id %}"><i class="fas fa-check"></i>&nbsp;Approve</a></button>
                                     </td>
