--- a/capacity_app/templates/capacity_app/update_request.html
+++ b/capacity_app/templates/capacity_app/update_request.html
@@ -228,7 +228,9 @@ tbody {
     </div>
 </section>
 </main>
-
+{% if messages %}
+         <script>alert("{{ messages }}")</script>
+    {% endif %}
 <script src="{% static 'capacity_app/table_extensions/vendor/jquery/jquery2.1.min.js' %}"></script>
 
 <script>
