--- a/capacity_app/templates/capacity_app/completed_request.html
+++ b/capacity_app/templates/capacity_app/completed_request.html
@@ -161,11 +161,11 @@ td {
                                     <td nowrap class="dc">{{i.data_center}}</td>
                                     <td nowrap class="project_name">{{i.project_name}}</td>
                                     <td nowrap class="user_id">{{i.user_id}}</td>
-                                    <td nowrap class="std_stable1">{{i.std_stable_1|floatformat}}</td>
-                                    <td nowrap class="std_stable2">{{i.std_stable_2|floatformat}}</td>
+                                    <td nowrap class="std_stable1">{{i.std_stable1|floatformat}}</td>
+                                    <td nowrap class="std_stable2">{{i.std_stable2|floatformat}}</td>
                                     <td nowrap class="std_arbor">{{i.std_arbor|floatformat}}</td>
-                                    <td nowrap class="stable1">{{i.stable_1|floatformat}}</td>
-                                    <td nowrap class="stable2">{{i.stable_2|floatformat}}</td>
+                                    <td nowrap class="stable1">{{i.stable1|floatformat}}</td>
+                                    <td nowrap class="stable2">{{i.stable1|floatformat}}</td>
                                     <td nowrap class="arbor">{{i.arbor|floatformat}}</td>
                                     <td nowrap class="gravit">{{i.gravit|floatformat}}</td>
                                     <td nowrap class="updated_at">{{i.updated_time|date:'Y-m-d H:i:s'}}</td>
