--- a/capacity_app/templates/capacity_app/procurement_completed_request.html
+++ b/capacity_app/templates/capacity_app/procurement_completed_request.html
@@ -75,6 +75,7 @@ td {
                         <font size="2" face = "futura,helvetica">
                             <table class="table table-bordered table-striped" id="example"
                                    data-toggle="table"
+                                   data-card-view="true"
                                    data-pagination="true"
                                    data-search="true"
                                    data-show-columns="false"
@@ -92,7 +93,7 @@ td {
                                    data-pagination-next-text="Next"
                                    data-pagination-h-align="left"
                                    data-pagination-detail-h-align="right"
-                                   data-page-size="10"
+                                   data-page-size="1"
                                    data-page-list="[20, 30, 40, 50, All]"
                                    data-buttons-class="primary">
                                 <thead>
@@ -110,6 +111,10 @@ td {
                                     <th nowrap class="gravit" data-field="gravit" data-sortable="true" > Gravit (TB)</th>
                                     <th nowrap class="updated_at" data-field="updated_at" data-sortable="true" >Updated Date</th>
                                     <th nowrap class="remarks" data-field="remarks" data-sortable="true" >Remarks</th>
+                                    {% for i in mile_stone %}
+                                    <th>Milestone</th>
+                                    <th>Milestone Date</th>
+                                    {% endfor %}
                                     <th nowrap class="action" data-sortable="true" data-formatter="priceFormatter">Status</th>
                                 </tr>
                                 </thead>
@@ -127,8 +132,12 @@ td {
                                     <td nowrap class="stable2">{{i.stable2|floatformat}}</td>
                                     <td nowrap class="arbor">{{i.arbor|floatformat}}</td>
                                     <td nowrap class="gravit">{{i.gravit|floatformat}}</td>
-                                    <td nowrap class="updated_at">{{i.approved_at|date:'Y-m-d H:m:s'}}</td>
+                                    <td nowrap class="updated_at">{{i.approved_at|date:'Y-m-d H:i:s'}}</td>
                                     <td nowrap class="remarks">{{i.remarks}}</td>
+                                    {% for i in mile_stone %}
+                                    <td>{{i.name}}</td>
+                                    <td>{{i.date}}</td>
+                                    {% endfor %}
                                     <td nowrap class="action">Completed</td>
                                     {% endfor %}
                                 </tr>
